cosmetic provider & inventory changes